--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <style>
       body {
         font-family: "Inter", "Pretendard", "Noto Sans KR", Arial, sans-serif;
-        background: #FEE500;
+        background: #fee500;
         color: #222;
         margin: 0;
       }
@@ -263,10 +263,38 @@
           사회혁신가의 멘토링으로 실전 프로젝트를 경험한다
         </p>
 
-        <h1>40명만 듣는 수업! 놓치면 진짜 후회합니다</h1>
-        <div style="display: flex; align-items: center; justify-content: center; gap: 12px; margin-top: 12px;">
-          <h1 style="font-size: 2rem; margin: 0; color: #191654; font-weight: 800;">학수번호 : <span id="course-num">15738001</span></h1>
-          <button id="copy-course-num" style="padding: 8px 18px; font-size: 1rem; border-radius: 8px; border: 2px solid #ff6f61; background: #ff6f61; color: #fff; font-weight: 800; cursor: pointer; box-shadow: 0 2px 8px #ff6f6133; transition: background 0.2s, color 0.2s;">복사</button>
+        <h1>40명만 들을 수 이는 찐수업! 놓치면 진짜 후회합니다</h1>
+        <div
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            margin-top: 12px;
+          "
+        >
+          <h1
+            style="font-size: 2rem; margin: 0; color: #191654; font-weight: 800"
+          >
+            학수번호 : <span id="course-num">15738001</span>
+          </h1>
+          <button
+            id="copy-course-num"
+            style="
+              padding: 8px 18px;
+              font-size: 1rem;
+              border-radius: 8px;
+              border: 2px solid #ff6f61;
+              background: #ff6f61;
+              color: #fff;
+              font-weight: 800;
+              cursor: pointer;
+              box-shadow: 0 2px 8px #ff6f6133;
+              transition: background 0.2s, color 0.2s;
+            "
+          >
+            복사
+          </button>
         </div>
       </div>
     </div>
@@ -301,6 +329,7 @@
     <div class="hero">
       <div class="container">
         <h2>강의 계획서</h2>
+        <ul style="list-style: none; padding: 0; margin: 0">
           <li style="margin-bottom: 12px">
             <a
               href="https://docs.google.com/document/d/1C2xGKiURjZ0B1So0FDGiyO_40hyKKRV-kQvgEaz7OKw/edit?usp=sharing"
@@ -316,7 +345,7 @@
           </li>
         </ul>
       </div>
-    </div>    
+    </div>
 
     <div class="hero">
       <div class="container">
@@ -354,7 +383,8 @@
 
     <div class="hero">
       <div class="container">
-        <h2>테크포임팩트 캠퍼스 수강생 후기</h2>
+        <ul style="list-style: none; padding: 0; margin: 0">
+          <h2>테크포임팩트 캠퍼스 수강생 후기</h2>
           <li style="margin-bottom: 12px">
             <a
               href="https://brunch.co.kr/@msmmx/54"
@@ -388,9 +418,7 @@
     <div class="hero">
       <div class="container">
         <h2>문의 하기</h2>
-        <a
-          class="faq-link"
-          href="mailto:namjookim@gachon.ac.kr"
+        <a class="faq-link" href="mailto:namjookim@gachon.ac.kr"
           >namjookim@gachon.ac.kr 로 메일 주세요</a
         >
       </div>
@@ -398,17 +426,26 @@
 
     <footer <footer>
       <div>© 2025 Tech for Impact @ Gachon University</div>
-      <div><a href="https://gcs.gachon.ac.kr/" target="_blank" style="color: #191654; font-weight: 800; text-decoration: underline;">가천코코네스쿨</a></div>
+      <div>
+        <a
+          href="https://gcs.gachon.ac.kr/"
+          target="_blank"
+          style="color: #191654; font-weight: 800; text-decoration: underline"
+          >가천코코네스쿨</a
+        >
+      </div>
     </footer>
 
     <script src="./main.js"></script>
     <script>
-      document.getElementById('copy-course-num').onclick = function() {
-        const num = document.getElementById('course-num').textContent;
-        navigator.clipboard.writeText(num).then(function() {
-          const btn = document.getElementById('copy-course-num');
-          btn.textContent = '복사됨!';
-          setTimeout(function() { btn.textContent = '복사'; }, 1200);
+      document.getElementById("copy-course-num").onclick = function () {
+        const num = document.getElementById("course-num").textContent;
+        navigator.clipboard.writeText(num).then(function () {
+          const btn = document.getElementById("copy-course-num");
+          btn.textContent = "복사됨!";
+          setTimeout(function () {
+            btn.textContent = "복사";
+          }, 1200);
         });
       };
     </script>
