--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
   <body>
     <div class="hero">
       <div class="container">
-        <h1>테크포임팩트 수업이 가천대학교에 개설된다고?</h1>
+        <h1>카카오 테크포임팩트 수업이 가천대학교에 개설된다고?</h1>
         <p>
           2025년 2학기에 가천대, 서울대, 카이스트에 함께 개설되고 같이
           진행됩니다
@@ -263,7 +263,7 @@
           사회혁신가의 멘토링으로 실전 프로젝트를 경험한다
         </p>
 
-        <h1>40명만 들을 수 이는 찐수업! 놓치면 진짜 후회합니다</h1>
+        <h1>40명만 들을 수 있는 찐수업! 놓치면 진짜 후회</h1>
         <div
           style="
             display: flex;
